fix:  Исправить letter-spacing

--- a/blocks/reviews/__author/reviews__author.css
+++ b/blocks/reviews/__author/reviews__author.css
@@ -3,7 +3,7 @@
   font-size: 20px;
   line-height: 1.2;
   color: #242424;
-  letter-spacing: -1%;
+  letter-spacing: -0.01em;
   font-weight: 400;
   display: block;
 }
