--- a/blocks/reviews/__text/reviews__text.css
+++ b/blocks/reviews/__text/reviews__text.css
@@ -3,7 +3,7 @@
   font-size: 20px;
   line-height: 1.4;
   color: #242424;
-  letter-spacing: -1%;
+  letter-spacing: -0.01em;
   font-weight: 300;
   margin: 0;
   margin-bottom: 56px;
