--- a/blocks/reviews/__title/reviews__title.css
+++ b/blocks/reviews/__title/reviews__title.css
@@ -3,7 +3,7 @@
   font-size: 40px;
   line-height: 1;
   color: #242424;
-  letter-spacing: -1%;
+  letter-spacing: -0.01em;
   margin: 0;
   margin-right: 30px;
 }
